--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.library'
+
 apply plugin: "kotlin-android"
 apply plugin: "kotlin-android-extensions"
-
-
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
@@ -21,6 +20,7 @@ android {
         buildScript{
             repositories{
                 mavenCentral()
+                maven { url 'https://jitpack.io' }
             }
         }
         release {
