--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 
 apply plugin: "kotlin-android"
 apply plugin: "kotlin-android-extensions"
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
@@ -21,6 +22,8 @@ android {
             repositories{
                 mavenCentral()
                 maven { url 'https://jitpack.io' }
+                group= 'com.github.Francesco-Castelli-01'
+                version= "0.1.2-alpha"
             }
         }
         release {
