--- a/build.gradle
+++ b/build.gradle
@@ -2,51 +2,33 @@ apply plugin: 'com.android.library'
 
 apply plugin: "kotlin-android"
 apply plugin: "kotlin-android-extensions"
+apply from: 'publish.gradle'
 
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
-    defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
-    }
-
     buildTypes {
         buildScript{
             repositories{
                 mavenCentral()
-                maven { url 'https://jitpack.io' }
-                group= 'com.github.Francesco-Castelli-01'
-                version= "0.1.2-alpha"
+                jcenter()
+                google()
             }
         }
         release {
-            minifyEnabled false
+            //minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
     }
 }
 
 dependencies {
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.core:core-ktx:1.4.0-alpha01'
+}
+allprojects {
+    repositories {
+        jcenter()
+        google()
+    }
 }
